<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:wallpaper="http://schemas.android.com/apk/res/com.serrofortia.wallpaper"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_splash">

   
    <com.serrofortia.wallpaper.ui.components.TextViewExtended
        android:id="@+id/btnGroups"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/groups_title"
        android:textColor="@drawable/menu_item_text_selector"
        android:textSize="24sp"
        wallpaper:typefaceCustom="hl"
        android:gravity="left"
        android:paddingLeft="15dp"
        android:paddingTop="15dp"
		android:paddingBottom="15dp"
		android:background="@drawable/menu_item_selector"
		        
        
         />
    
    <ImageView  android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/white_transparent"/>
    
    <!--     <com.serrofortia.wallpaper.ui.components.TextViewExtended
        android:id="@+id/btnInvitations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/invitations"
        android:textColor="@drawable/menu_item_text_selector"
        android:textSize="24sp"
        wallpaper:typefaceCustom="hl"
        android:gravity="left"
        android:paddingLeft="15dp"
        android:paddingTop="15dp"
		android:paddingBottom="15dp"
		android:background="@drawable/menu_item_selector"
		        
        
         />
    
    <ImageView  android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/white_transparent"/>
    -->
    
    <com.serrofortia.wallpaper.ui.components.TextViewExtended
        android:id="@+id/btnRecommendations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recommendations"
        android:textColor="@drawable/menu_item_text_selector"
        android:textSize="24sp"
        wallpaper:typefaceCustom="hl"
        android:gravity="left"
        android:paddingLeft="15dp"
        android:paddingTop="15dp"
		android:paddingBottom="15dp"
		android:background="@drawable/menu_item_selector"
		        
        
         />
    
    <ImageView  android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/white_transparent"/>
    
     <com.serrofortia.wallpaper.ui.components.TextViewExtended
        android:id="@+id/btnTermsAndConditions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/conditions_title"
        android:textColor="@drawable/menu_item_text_selector"
        android:textSize="24sp"
        wallpaper:typefaceCustom="hl"
        android:gravity="left"
        android:paddingLeft="15dp"
        android:paddingTop="15dp"
		android:paddingBottom="15dp"
		android:background="@drawable/menu_item_selector"
		        
        
         />
    
    <ImageView  android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/white_transparent"/>

 </LinearLayout>
